--- a/p2/index.html
+++ b/p2/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;1,300&family=Inter:wght@100..900&display=swap"
         rel="stylesheet">
+    <script defer src="script.js"></script>
     <title>Project 2</title>
 </head>
 
@@ -18,7 +19,26 @@
     </h3>
     <h1>on manifestation, gratitude and appreciation</h1>
     <p>a wishlist project inspired by noa goffer, a reclamation of ownership through creativity adoration and of the
-        object, a sincere recollection of things i cherish (parasocially)</p>
+        object, a sincere recollection of things i cherish</p>
+    <div id="controls">
+        <div class="row-flexbox">
+            <label for="type-filter">ode:</label>
+            <select id="type-filter">
+                <option value="all">yearning for</option>
+                <option value="accessory">accessory</option>
+                <option value="clothing">clothing</option>
+                <option value="ceramic">ceramics</option>
+                <option value="home">home</option>
+                <option value="shoe">shoes</option>
+            </select>
+        </div>
+        <!-- <div class="row-flexbox">
+            <label for="time-filter">Time:</label>
+            <input type="range" id="time-filter" min="0" max="20" step="1" value="0">
+            <output for="time-filter">0</output> hours or more
+        </div> -->
+    </div>
+    <div id="toolbox"></div>
     <a href="../index.html"><button>back</button></a>
 
 </body>
