--- a/p2/index.html
+++ b/p2/index.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;1,300&family=Inter:wght@100..900&display=swap"
         rel="stylesheet">
     <script defer src="script.js"></script>
-    <title>Project 2</title>
+    <title>An Ode</title>
 </head>
 
 <body>
